--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
-<html>
-<body>
+ <body>
 
-<p id="demo"></p>
+<header>
+<h1>Header 1!</h1>
+</header>
 
-<script>
-document.getElementById("demo").innerHTML = "Hello JavaScript!";
-</script> 
+<nav>
+adam<br>
+jesse<br>
+Ashlee<br>
+</nav>
 
-</body>
-</html>
+<section>
+<h1>section header </h1>
+<p>
+stuff about adam.
+</p>
+<p>
+More Stuff!
+</p>
+</section>
+
+<footer>
+ThunderBird
+</footer>
+
+</body> 
