--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: single
 ----->
 <head>
-<link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/kre/devtools/gh-pages/_layouts/single.css">
+<link rel="stylesheet" type="text/css" href="single.css">
 </head>
 
 <body>
