--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!-----
-layout: single
------>
+-----
+layout: default
+-----
 <head>
 <link rel="stylesheet" type="text/css" href="single.css">
 </head>
