--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 -----
 layout: default
+type: homepage
+title: KrlTools 
+authors:
+- Adam
+- Jesse
+- Ashlee
+- Phil Windley
+published: true
 -----
 <head>
 <link rel="stylesheet" type="text/css" href="single.css">
