--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ authors:
 - Phil Windley
 published: true
 -----
-<head>
+<!--<head>
 <link rel="stylesheet" type="text/css" href="single.css">
-</head>
+</head>-->
 
 <body>
 
