--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@ published: true
         <div class="sidebar">
           <h3>Contact Information</h3>
             <p>
-              <a href="mailto:info@kynetx.com">info@kynetx.com</a><br/>
+              <!--<a href="mailto:info@kynetx.com">info@kynetx.com</a><br/>-->
             </p>
         </div> <!-- /sidebar -->
       </div> <!-- /col-lg-4 -->
