--- a/index.html
+++ b/index.html
@@ -1,42 +1,8 @@
------
+---
 layout: default
-type: homepage
-title: KrlTools 
-authors:
-- Adam
-- Jesse
-- Ashlee
-- Phil Windley
-published: true
------
-<!--<head>
-<link rel="stylesheet" type="text/css" href="single.css">
-</head>-->
+title: Hello, World!  
+---
+# Hello World
 
-<body>
+I Think, Therefore I am.
 
-<header>
-<h1>Header 1!</h1>
-</header>
-
-<nav>
-adam<br>
-jesse<br>
-Ashlee<br>
-</nav>
-
-<section>
-<h1>section header </h1>
-<p>
-stuff about adam.
-</p>
-<p>
-More Stuff!
-</p>
-</section>
-
-<footer>
-ThunderBird
-</footer>
-
-</body> 
