--- a/app.html
+++ b/app.html
@@ -1,3 +1,8 @@
+---
+layout: app
+title: Application 
+---
+
 <!-- ---------- Page one ---------- -->
 <div data-role="page" id="page-one" data-title="Page One">
   <!-- /header -->
