--- a/DevTools.html
+++ b/DevTools.html
@@ -2,3 +2,8 @@
 layout: app
 title: KRL-DevTools 
 ---
+{% include_relative appPages/login.html %}
+{% include_relative appPages/forgot-password.html %}
+{% include_relative appPages/register.html %}
+{% include_relative appPages/home.html %}
+
