shells for webpages

--- a/DevTools.html
+++ b/DevTools.html
@@ -7,3 +7,8 @@ title: KRL-DevTools
 {% include_relative appPages/register.html %}
 {% include_relative appPages/home.html %}
 
+{% include_relative appPages/listing.html %}
+{% include_relative appPages/registering-ruleset.html %}
+{% include_relative appPages/confirming-deletion.html %}
+{% include_relative appPages/updating-url.html %}
+
