--- a/DevTools.html
+++ b/DevTools.html
@@ -2,6 +2,7 @@
 layout: app
 title: KRL-DevTools 
 ---
+{% include_relative appPages/authorize.html %}
 {% include_relative appPages/login.html %}
 {% include_relative appPages/forgot-password.html %}
 {% include_relative appPages/register.html %}
