--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 ---
-layout: default
-title: Hello, World!  
+layout: app
+title: KRL-DevTools 
 ---
-# Hello World! 
+{% include_relative appPages/intro.html %}
+{% include_relative appPages/login.html %}
+{% include_relative appPages/forgot-password.html %}
+{% include_relative appPages/register.html %}
+{% include_relative appPages/home.html %}
 
-I Think, Therefore I am.
+{% include_relative appPages/listing.html %}
+{% include_relative appPages/registering-ruleset.html %}
+{% include_relative appPages/confirming-deletion.html %}
+{% include_relative appPages/updating-url.html %}
 
