--- a/index.html
+++ b/index.html
@@ -12,4 +12,6 @@ title: KRL-DevTools
 {% include_relative appPages/registering-ruleset.html %}
 {% include_relative appPages/confirming-deletion.html %}
 {% include_relative appPages/updating-url.html %}
+{% include_relative appPages/authorize.html %}
+
 
