--- a/code.html
+++ b/code.html
@@ -1,9 +1,8 @@
 ---
-layout: app
+layout: code
 title: Get Code and Redirect
 authors:
   - BYU Dev Team
-published: true
 ---
 
 <div data-role="page" id="dialog-please wait">
