work towards a sidebar menu.

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -1,4 +1,6 @@
 <div data-role="page" id="home">
+
+	{% include menu.html %}
 	<div data-role="header">
 		<a href="#home" class="ui-btn ui-corner-all ui-shadow ui-icon-home ui-btn-icon-left">Home</a>
 		<h1>Welcome To KRL Development Homepage</h1>
