--- a/appPages/authorize.html
+++ b/appPages/authorize.html
@@ -20,12 +20,12 @@
 <div data-role="content" >
   <ul data-role="listview" data-inset="true">
     <li data-role="list-divider" >
-      <h2 style="text-align:center; font-size: 150%">Welcome to Fuse</h2>
+      <h2 style="text-align:center; font-size: 150%">Welcome to our KRL Developers!</h2>
     </li>
     <li  style="background:white; font-size: 150%">
-      <p class="wrap">Fuse is a connected-car application that is designed to give your car a voice and connect it to the rest of your online life.</p>
+      <p class="wrap">We're all here to learn KRL and become better developers of this awesome language.</p>
 
-      <p class="wrap">Fuse data is stored in a personal cloud from Kynetx that is designed to protect the privacy of your data and put it under your control. You can use the "Authorize" button to link to an existing Kynetx account or use the "Create" button to create a new account.</p>
+      <p class="wrap">KRL Developer data is stored in a personal cloud from Kynetx that is designed to protect the privacy of your data and put it under your control. You can use the "Authorize" button to link to an existing Kynetx account or use the "Create" button to create a new account.</p>
 
 
       <p class="wrap"><b>Note:</b> please don't sign in with a SquareTag account. Rather, we recommend you create a new account.</p>
