--- a/appPages/home.html
+++ b/appPages/home.html
@@ -28,6 +28,6 @@
 
 	<div data-role="footer">
 		<a href="#login" class="ui-btn ui-corner-all ui-shadow ui-icon-home ui-btn-icon-left">Logout</a>
-		<h1>Develop with indent!</h1>
+		<h1>Develop with intent!</h1>
 	</div>
 </div>
