--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -4,7 +4,24 @@
 	</div>
 
 	<div data-role="main" class="ui-content">
-	
+        <div class="list ruleset wrapper">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>
+                  RID
+                </th>
+                <th>
+                  Source URL
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              
+
+            </tbody>
+          </table>
+        </div>
 	</div>
 	<div data-role="footer">
 			
