--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -4,23 +4,7 @@
 	</div>
 
 	<div data-role="main" class="ui-content">
-        <div class="list ruleset wrapper">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>
-                  RID
-                </th>
-                <th>
-                  Source URL
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-              <ul id="List-Rulesets" class="settings-list" data-role="listview" data-inset="true">
-            </tbody>
-          </table>
-        </div>
+    <ul id="manage-fuse-announcement" class="settings-list" data-role="listview" data-inset="true">        
 	</div>
 	<div data-role="footer">
 			
