--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -4,7 +4,23 @@
 	</div>
 
 	<div data-role="main" class="ui-content">
-    <ul id="manage-fuse-announcement" class="settings-list" data-role="listview" data-inset="true">        
+        <div class="list ruleset wrapper">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>
+                  RID
+                </th>
+                <th>
+                  Source URL
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <ul id="manage-fuse-announcement" class="settings-list" data-role="listview" data-inset="true">
+            </tbody>
+          </table>
+        </div>
 	</div>
 	<div data-role="footer">
 			
