--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -17,7 +17,7 @@
               </tr>
             </thead>
             <tbody>
-              <ul id="manage-fuse-announcement" class="settings-list" data-role="listview" data-inset="true">
+              <ul id="#List-Rulesets" class="settings-list" data-role="listview" data-inset="true">
             </tbody>
           </table>
         </div>
