--- a/appPages/home.html
+++ b/appPages/home.html
@@ -27,7 +27,7 @@
 	</div>
 
 	<div data-role="footer">
-		<a href="#login" class="ui-btn ui-corner-all ui-shadow ui-icon-home ui-btn-icon-left">Logout</a>
+		<a href="#" class="logout" data-transition="slide">Logout</a>
 		<h1>Develop with intent!</h1>
 	</div>
 </div>
