--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@ title: KRL-DevTools
 {% include_relative appPages/confirming-deletion.html %}
 {% include_relative appPages/updating-url.html %}
 
+<!-- ----------templates ---------- -->
 
+{% include_relative Templates/List-Rulesets-template.html %}
 
