listing rules and button

--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -4,49 +4,13 @@
 	</div>
 
 	<div data-role="main" class="ui-content">
+        </ul><!-- /listview -->
+  
+        <ul id="ruleset-list" class="ruleset-list" data-role="listview" data-inset="true"> 
  
-          <div data-role="main" class="ui-content">
-            <!--<form id="ruleset-form">-->
-              <table data-role="table" id="ruleset-list" data-inset="true"> 
-                
-                <thead>      
-                  <tr>
-                    <th>
-                      RID
-                    </th>
-                    <th>
-                      Source URL
-                    </th>
-                    <th>
-                      Editing
-                    </th>
-                  </tr>
-                </thead>
+        </ul><!-- /listview -->
 
-              </table>
-
-
-                <!--<tbody>
-                  <tr>
-                    <td>
-                      <input type="text" id="RID" placeholder="RID" value="">
-                    </td>
-                    <td>
-                      <input type="text" id="source-URL" placeholder="source-URL" value="">
-                    </td>
-                  </tr>
-                </tbody>
-
-              </table>
-
-
-              <a class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Save</a>
-              <a class="cancel" href="#page-manage-fuse" data-icon="delete" data-role="button" data-inline="true">Cancel</a>
-            </form>-->
-
-
-
-          </div>
+  </div>
 
 	</div>
 	<div data-role="footer">
