--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -9,6 +9,9 @@
         <ul id="ruleset-list" class="ruleset-list" data-role="listview" data-inset="true"> 
  
         </ul><!-- /listview -->
+        <ul id="manage-list" class="ruleset-list" data-role="listview" data-inset="true"> 
+ 
+        </ul>
 
   </div>
 
