initial logging page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@ title: KRL-DevTools
 {% include_relative appPages/home.html %}
 {% include_relative appPages/authorize.html %}
 
-
 {% include_relative appPages/listing.html %}
 {% include_relative appPages/registering-ruleset.html %}
 {% include_relative appPages/confirming-deletion.html %}
 {% include_relative appPages/updating-url.html %}
+{% include_relative appPages/page-picologging.html %}
+
 
 <!-- ----------templates ---------- -->
 
