--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: KRL-DevTools
 {% include_relative appPages/registering-ruleset.html %}
 {% include_relative appPages/confirming-deletion.html %}
 {% include_relative appPages/updating-url.html %}
-{% include_relative appPages/page-picologging.html %}
+{% include_relative appPages/picologging.html %}
 
 
 <!-- ----------templates ---------- -->
