--- a/index.html
+++ b/index.html
@@ -14,5 +14,20 @@ title: KRL-DevTools
 
 <!-- ----------templates ---------- -->
 
-{% include_relative Templates/List-Rulesets-template.html %}
+<!--{% include_relative Templates/List-Rulesets-template.html %}
+-->
+{% raw %} <!-- turn off jekyl (in github pages) -->
 
+<div id="list-rulesets-template" style="display:none;">
+  <li class="ui-field-contain">
+      <a data-transition="slide" href="#updating-url?id={{id}}"> <!--change page-update-vehicle-->
+       <p class="ui-li-aside">{{last_running}}</p>
+       <h3><b>{{rid}}</b></h3> <!--pulls these {{}} values from paint_item in app.js-->
+       <p>{{uri}}<br/>
+          {{description}}
+       </p>
+      </a>
+  </li>
+</div>
+
+{% endraw %}
