--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: app
-title: KRL-DevTools 
+title: KRL Developer Tools 
 ---
 {% include_relative appPages/home.html %}
 {% include_relative appPages/authorize.html %}
@@ -14,5 +14,5 @@ title: KRL-DevTools
 
 <!-- ----------templates ---------- -->
 
-{% include_relative Templates/List-Rulesets-template.html %}
+{% include_relative Templates/List_templates.html %}
 
