--- a/index.html
+++ b/index.html
@@ -14,27 +14,5 @@ title: KRL Developer Tools
 
 <!-- ----------templates ---------- -->
 
+{% include_relative Templates/List_templates.html %}
 
-
-{% raw %} <!-- turn off jekyl (in github pages) -->
-
-<div id="list-rulesets-template" style="display:none;">
-  <li class="ui-field-contain">
-      <a data-transition="slide" href="#"> <!--was priorly #page-update-vehicle-->
-       <h3><b>{{rid}}</b></h3> <!--pulls these {{}} values from paint_item in app.js-->
-       <p>{{uri}}</p>
-      </a>
-  </li>
-</div>
-
-<!--<div id="logitem-template" style="display:none;">
-   <div id="{{id}}" data-role="collapsible" data-theme="a" data-content-theme="b">
-   <h2>{{timestamp}} ({{eid}})</h2>
-        {{#each log_items}}
-	 {{this}}<br/>
-        {{/each}}
-   </div> -->
-</div>
-
-
-{% endraw %}
