--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -5,10 +5,10 @@
 
   	<div data-role="main" class="ui-content">
     
-          <ul id="ruleset-list" class="ruleset-list" data-role="listview" data-inset="true"> 
+          <ul id="ruleset-list" class="ruleset" data-role="listview" data-inset="true"> 
    
           </ul><!-- /listview -->
-          <ul id="manage-list" class="manage-list" data-role="listview" data-inset="true"> 
+          <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true"> 
    
           </ul>
 
