picologging feature complete

--- a/appPages/picologging.html
+++ b/appPages/picologging.html
@@ -17,7 +17,9 @@
 	      <option value="on">On</option>
            </select>
          </div>
-       
+         <button id="logrefresh" data-theme="b" >Refresh</button>
+         <button id="logclear" data-theme="b" >Clear</button>
+	</li>       
       </ul>
 
       <div data-role="collapsible-set" data-content-theme="a" data-iconpos="right">
