--- a/appPages/home.html
+++ b/appPages/home.html
@@ -9,13 +9,17 @@
 
 	<div data-role="main" class="ui-content">
 		<p>Welcome to your KRL Development home, this is where you want to be.</p>
-
+		<ul data-role="listview" data-inset="true"> 
+	       <li data-role="list-divider" >Dev Tools</li>
+	       <li>
+	         <button id="logrefresh" data-theme="b" >Refresh</button>
+	         <button id="logclear" data-theme="b" >Clear</button>
+		</li>       
+	      </ul>
 
 		
 		<a href="#listing" class="ui-btn ui-btn-inline devtools-btn">Listing Ruleset</a>
 		<a href="#registering-ruleset" class="ui-btn ui-btn-inline devtools-btn">Registering Ruleset</a>
-		<a href="#confirming-deletion" class="ui-btn ui-btn-inline devtools-btn">Confirming Deletion</a>
-		<a href="#updating-url" class="ui-btn ui-btn-inline devtools-btn">Updating Url</a>
 		<a href="#page-picologging" class="ui-btn ui-btn-inline devtools-btn">Logging</a>
 	</div>
 
