--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -4,9 +4,29 @@
 	</div>
 
 	<div data-role="main" class="ui-content">
-	
+		<form id="form-update-url">
+		  <ul id="form-update-url-list" data-role="listview" data-inset="true"> 
+		    <li data-role="list-divider" >{{rid}}</li>
+		    <li class="ui-field-contain">
+		      <label for="text">URL</label>
+		      <input type="text" data-clear-btn="true" name="name" id="name" placeholder="Insert Current URL code here" value="">
+		    </li>
+
+
+		  </ul>
+
+		  <input type="hidden" id="id" name="id" value="">
+
+		  <ul id="error-msg" data-role="listview" data-inset="true" class="alert alert-error" style="display:none"></ul>
+
+		  <a class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Save</a>
+		  <a class="cancel" href="#page-manage-fuse" data-icon="delete" data-role="button" data-inline="true">Cancel</a>
+		  <a class="delete" href="#page-vehicle-confirm-delete" data-rel="dialog" data-transition="pop" data-role="button" data-inline="true">Delete</a>
+		</form>
 	</div>
+
 	<div data-role="footer">
 			
 	</div>
 </div>
+
