--- a/appPages/home.html
+++ b/appPages/home.html
@@ -12,7 +12,7 @@
 		<ul data-role="listview" data-inset="true"> 
 	       <li data-role="list-divider" >Dev Tools</li>
 	       <li>
-	       <a href="#listing" class="ui-btn ui-btn-inline devtools-btn">Listing Ruleset</a>
+	       <button href="#listing" class="ui-btn ui-btn-inline devtools-btn">Listing Ruleset</button>
 			<a href="#registering-ruleset" class="ui-btn ui-btn-inline devtools-btn">Registering Ruleset</a>
 		<a href="#page-picologging" class="ui-btn ui-btn-inline devtools-btn">Logging</a>
 	         <button id="logrefresh" data-theme="b" >Refresh</button>
