--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -19,7 +19,8 @@
               </div>
             </div>
             <div class="form-actions">
-              <button type="submit" class="btn btn-primary">Register Ruleset</button>
+            	<a class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Register Ruleset</a>
+              <!--<button type="submit" class="btn btn-primary">Register Ruleset</button>-->
             </div>
           </fieldset>
         </form>
