fix missing comma, add install to home

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -12,9 +12,10 @@
 		<ul data-role="listview" data-inset="true"> 
 			<li data-role="list-divider" >Dev Tools</li>
 			<li>
-				<a href="#listing" class="ui-btn ui-btn-inline devtools-btn">Listing Ruleset</a>
-				<a href="#registering-ruleset" class="ui-btn ui-btn-inline devtools-btn">Registering Ruleset</a>
-				<a href="#page-picologging" class="ui-btn ui-btn-inline devtools-btn">Logging</a>
+				<a href="#listing" class="ui-btn ui-btn-inline devtools-btn">List Registered Rulesets</a>
+				<a href="#registering-ruleset" class="ui-btn ui-btn-inline devtools-btn">Register Rulesets</a>
+				<a href="#page-install-rulesets" class="ui-btn ui-btn-inline devtools-btn">Install Rulesets</a>
+				<a href="#page-picologging" class="ui-btn ui-btn-inline devtools-btn">Pico Logging</a>
 				
 			</li>       
 		</ul>
