Add fucntion for installed ruleset listing to ruleset

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -14,7 +14,7 @@
 			<li>
 				<a href="#listing" class="ui-btn ui-btn-inline devtools-btn">List Registered Rulesets</a>
 				<a href="#registering-ruleset" class="ui-btn ui-btn-inline devtools-btn">Register Rulesets</a>
-				<a href="#page-install-rulesets" class="ui-btn ui-btn-inline devtools-btn">Install Rulesets</a>
+				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline devtools-btn">Install Rulesets</a>
 				<a href="#page-picologging" class="ui-btn ui-btn-inline devtools-btn">Pico Logging</a>
 				
 			</li>       
