--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: KRL Developer Tools
 {% include_relative appPages/confirming-deletion.html %}
 {% include_relative appPages/updating-url.html %}
 {% include_relative appPages/picologging.html %}
+{% include_relative appPages/install-rulesets.html %}
 
 
 <!-- ----------templates ---------- -->
