--- a/appPages/home.html
+++ b/appPages/home.html
@@ -12,11 +12,16 @@
 		<ul data-role="listview" data-inset="true"> 
 			<li data-role="list-divider" >Dev Tools</li>
 			<li>
-				<a href="#listing" class="ui-btn ui-btn-inline devtools-btn">List Registered Rulesets</a>
-				<a href="#registering-ruleset" class="ui-btn ui-btn-inline devtools-btn">Register Rulesets</a>
-				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline devtools-btn">Install Rulesets</a>
-				<a href="#page-picologging" class="ui-btn ui-btn-inline devtools-btn">Pico Logging</a>
-				
+				<a href="#listing" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">List Registered Rulesets</a>
+			</li>       
+			<li>
+				<a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">Register Rulesets</a>
+			</li>       
+			<li>
+				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Install Rulesets</a>
+			</li>       
+			<li>
+				<a href="#page-picologging" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Pico Logging</a>
 			</li>       
 		</ul>
 
