Pass rids to the CloudOS functions...

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -18,7 +18,7 @@
 				<a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">Register Rulesets</a>
 			</li>       
 			<li>
-				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Install Rulesets</a>
+				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Installed Rulesets</a>
 			</li>       
 			<li>
 				<a href="#page-picologging" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Pico Logging</a>
