--- a/appPages/home.html
+++ b/appPages/home.html
@@ -1,16 +1,14 @@
 <div data-role="page" id="home">
 
-	<div data-role="header">
-		<a href="#home" class="ui-btn ui-corner-all ui-shadow ui-icon-home ui-btn-icon-left">Home</a>
-		<h1>Welcome To KRL Development Homepage</h1>
-		<a href="#tools" class="ui-btn ui-corner-all ui-shadow ui-icon-search ui-btn-icon-left">Tools</a>
-	</div>
+   <div data-role="header" data-theme="b" data-position="inline" class="ui-header ui-bar-b" role="banner">
+     <h1>Welcome To KRL Development Homepage</h1>
+     <a href="#" data-transition="slide" class="logout ui-link ui-btn-right ui-btn ui-btn-b ui-icon-power ui-btn-icon-left ui-shadow ui-corner-all">Logout</a>
+   </div>
 	
 
 	<div data-role="main" class="ui-content">
-		<p>Welcome to your KRL Development home, this is where you want to be.</p>
 		<ul data-role="listview" data-inset="true"> 
-			<li data-role="list-divider" >Dev Tools</li>
+			<li data-role="list-divider" >KRL Developer Tools</li>
 			<li>
 				<a href="#listing" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">List Registered Rulesets</a>
 			</li>       
@@ -29,8 +27,5 @@
 		
 	</div>
 
-	<div data-role="footer">
-		<a href="#" class="logout" data-transition="slide">Logout</a>
-		<h1>Develop with intent!</h1>
-	</div>
+  {% include footer.html %}
 </div>
