styling - making sure it works

--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -1,7 +1,6 @@
 <div data-role="page" id="listing">
-	<div data-role="header">
-		<h1>RULE SETS</h1>
-	</div>
+	
+    {% include header.html title="Installed Rulesets" %}
 
   	<div data-role="main" class="ui-content">
     
@@ -13,7 +12,7 @@
           </ul>
 
 	</div>
-	<div data-role="footer">
-			
-	</div>
+	
+  {% include footer.html %}
+  
 </div>
