--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -1,7 +1,6 @@
 <div data-role="page" id="updating-url">
-	<div data-role="header">
-		
-	</div>
+	
+	{% include header.html title="Installed Rulesets" %}
 
 	<div data-role="main" class="ui-content">
 		<form id="form-update-url">
@@ -25,8 +24,7 @@
 		</form>
 	</div>
 
-	<div data-role="footer">
-			
-	</div>
+	{% include footer.html %}
+
 </div>
 
