very rough first attempt for update url

--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -1,12 +1,9 @@
 <div data-role="page" id="listing">
 	
-    {% include header.html title="Installed Rulesets" %}
+    {% include header.html title="Ruleset List" %}
 
   	<div data-role="main" class="ui-content">
     
-          <ul id="ruleset-list" class="ruleset" data-role="listview" data-inset="true"> 
-   
-          </ul><!-- /listview -->
           <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true"> 
    
           </ul>
@@ -14,5 +11,5 @@
 	</div>
 	
   {% include footer.html %}
-  
+
 </div>
