--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -1,9 +1,12 @@
 <div data-role="page" id="listing">
 	
-    {% include header.html title="Ruleset List" %}
+    {% include header.html title="Installed Rulesets" %}
 
   	<div data-role="main" class="ui-content">
     
+          <ul id="ruleset-list" class="ruleset" data-role="listview" data-inset="true"> 
+   
+          </ul><!-- /listview -->
           <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true"> 
    
           </ul>
@@ -11,5 +14,5 @@
 	</div>
 	
   {% include footer.html %}
-
+  
 </div>
