--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -1,30 +1,27 @@
 <div data-role="page" id="updating-url">
 	
-	{% include header.html title="Update RID URL" %}
+	{% include header.html title="Installed Rulesets" %}
 
 	<div data-role="main" class="ui-content">
-		
-		<ul id="update-url" data-role="listview" data-inset="true"> 
-			<li data-role="list-divider" >Update URL</li>
-			<li>
-				<form id="form-update-url">
-					<div data-role="fieldcontain">
-						<!--insert rid here-->
-						<!--url is here-->
-						<label for="url">Ruleset URL:</label>
-						<input type="text" name="url" id="url" value="" placeholder="find a way to place in url here" />
-					</div>
-				</form>
-				<div>
-					<a id="update-url-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Install</a>
-					<a href="#listing" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
-				</div>
-			</li>
-		</ul>
+		<form id="form-update-url">
+		  <ul id="form-update-url-list" data-role="listview" data-inset="true"> 
+		    <li data-role="list-divider" >{{rid}}</li>
+		    <li class="ui-field-contain">
+		      <label for="text">URL</label>
+		      <input type="text" data-clear-btn="true" name="name" id="name" placeholder="Insert Current URL code here" value="">
+		    </li>
 
 
+		  </ul>
 
+		  <input type="hidden" id="id" name="id" value="">
 
+		  <ul id="error-msg" data-role="listview" data-inset="true" class="alert alert-error" style="display:none"></ul>
+
+		  <a class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Save</a>
+		  <a class="cancel" href="#page-manage-fuse" data-icon="delete" data-role="button" data-inline="true">Cancel</a>
+		  <a class="delete" href="#page-vehicle-confirm-delete" data-rel="dialog" data-transition="pop" data-role="button" data-inline="true">Delete</a>
+		</form>
 	</div>
 
 	{% include footer.html %}
