change word to update

--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -16,7 +16,7 @@
 					</div>
 				</form>
 				<div>
-					<a id="update-url-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Install</a>
+					<a id="update-url-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Update</a>
 					<a href="#listing" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
 				</div>
 			</li>
