Revert "updateURL general rough code"
This reverts commit 18227e6ef9d0c397ba48808a4c41f01235a1f482.

--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -4,7 +4,7 @@
 
 	<div data-role="main" class="ui-content">
 		
-		<ul id="update-url-list" data-role="listview" data-inset="true"> 
+		<ul id="update-url" data-role="listview" data-inset="true"> 
 			<li data-role="list-divider" >Update URL</li>
 			<li>
 				<form id="form-update-url">
