--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -1,7 +1,5 @@
 <div data-role="page" id="registering-ruleset">
-	<div data-role="header">
-		<h2>Create Ruleset</h2>
-	</div>
+  {% include header.html title="Installed Rulesets" %}
 
 	<div data-role="main" class="ui-content">
 	<div id="registering-ruleset-dev">
@@ -19,14 +17,12 @@
               </div>
             </div>
             <div class="form-actions">
-            	<a class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Register Ruleset</a>
+            	<a id= "regester-ruleset-confirm-button" class="save" href="#" data-icon="check" data-role="button" data-inline="true" data-theme="b">Register Ruleset</a>
               <!--<button type="submit" class="btn btn-primary">Register Ruleset</button>-->
             </div>
           </fieldset>
         </form>
       </div>
 	</div>
-	<div data-role="footer">
-		<h4>KRE Devtools</h5>
-	</div>
+	{% include footer.html %}
 </div>
