--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -1,6 +1,6 @@
 <div data-role="page" id="listing">
 	
-    {% include header.html title="Installed Rulesets" %}
+    {% include header.html title="Registered Rulesets" %}
 
   	<div data-role="main" class="ui-content">
     
