--- a/appPages/registering-ruleset.html
+++ b/appPages/registering-ruleset.html
@@ -1,5 +1,5 @@
 <div data-role="page" id="registering-ruleset">
-  {% include header.html title="Installed Rulesets" %}
+  {% include header.html title="register Rulesets" %}
 
 	<div data-role="main" class="ui-content">
 	<div id="registering-ruleset-dev">
