--- a/appPages/home.html
+++ b/appPages/home.html
@@ -10,7 +10,7 @@
 		<ul data-role="listview" data-inset="true"> 
 			<li data-role="list-divider" >KRL Developer Tools</li>
 			<li>
-				<a href="#listing" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">List Registered Rulesets</a>
+				<a href="#listing" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Registered Rulesets</a>
 			</li>       
 			<li>
 				<a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">Register Rulesets</a>
