adding registering ruleset to list

--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -5,10 +5,13 @@
   	<div data-role="main" class="ui-content">
     
           <ul id="ruleset-list" class="ruleset" data-role="listview" data-inset="true"> 
-   
+            <li data-role="list-divider" >Registering a New Ruleset</li>
+            <li>
+              <a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">Register Rulesets</a>
+            </li>  
           </ul><!-- /listview -->
           <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true"> 
-   
+            
           </ul>
 
 	</div>
