Add no home stuff

--- a/appPages/authorize.html
+++ b/appPages/authorize.html
@@ -1,6 +1,6 @@
 <div data-role="page" id="page-authorize" data-title="Authorize Fuse" data-close-btn="none">
 
-  {% include header.html title="Authorize" %}
+  {% include header.html title="Authorize" no_home=true %}
 
 <div data-role="content" >
   <ul data-role="listview" data-inset="true">
