--- a/appPages/authorize.html
+++ b/appPages/authorize.html
@@ -10,7 +10,7 @@
     <li  style="background:white; font-size: 150%">
       <p class="wrap">We're all here to learn KRL and become better developers of this awesome language.</p>
 
-      <p class="wrap">KRL Developer data is stored in a personal cloud from Kynetx that is designed to protect the privacy of your data and put it under your control. You can use the "Authorize" button to link to an existing Kynetx account or use the "Create" button to create a new account.</p>
+      <p class="wrap">KRL Developer data is stored in a personal cloud from Kynetx that is designed to protect the privacy of your data and put it under your control. You can use the "Authorize" button to link to an existing Kynetx account or use the "Create" button to create a new account.</p> {{no_home}}
 
 
     </li>
