--- a/code.html
+++ b/code.html
@@ -8,7 +8,7 @@ authors:
 <div data-role="page" id="dialog-please wait">
    <div data-role="header"> 
      <div class="header-image">
-        <img class="fuse-logo" src="https://s3.amazonaws.com/Fuse_assets/img/fuse_logo-40.png">
+        <img class="devtools-logo" src="img/devtools_icon.png">
      </div>
    </div><!-- /header -->
 
