--- a/code.html
+++ b/code.html
@@ -8,7 +8,7 @@ authors:
 <div data-role="page" id="dialog-please wait">
    <div data-role="header"> 
      <div class="header-image">
-        <img class="devtools-logo" src="/img/devtools_icon.png" width="75" height="75">
+        <img class="devtools-logo" src="img/devtools_icon.png" width="75" height="75">
      </div>
    </div><!-- /header -->
 
