--- a/appPages/listing.html
+++ b/appPages/listing.html
@@ -4,13 +4,13 @@
 
   	<div data-role="main" class="ui-content">
     
-          <ul id="ruleset-list" class="ruleset" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Search for a ruleset here"> 
+          <ul id="ruleset-list" class="ruleset" data-role="listview" data-inset="true" > 
             <li data-role="list-divider" >Ruleset List</li>
             <li>
               <a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">Register a new ruleset</a>
             </li>  
           </ul><!-- /listview -->
-          <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true"> 
+          <ul id="manage-list" class="ruleset" data-role="listview" data-inset="true" data-filter="true" data-filter-placeholder="Search for a ruleset here"> 
             
           </ul>
 
