--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -11,7 +11,7 @@
 					<div data-role="fieldcontain">
 						<!--insert rid here-->
 						<!--url is here-->
-						<label for="urlLabel" class="urlLabel">Ruleset URL:</label>
+						<label for="urlLabel" class="urlLabel"></label>
 						<input type="text" name="url" id="url" value="" placeholder="find a way to place in url here" />
 					</div>
 				</form>
