trying to get all of the label showing

--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -12,7 +12,8 @@
 						<!--insert rid here-->
 						<!--url is here-->
 						<label for="urlLabel" class="urlLabel"></label>
-						<input type="text" name="url" id="url" value="" placeholder="find a way to place in url here" />
+						</br>
+						<input type="text" name="url" id="url" value="" placeholder="Insert new URL here" />
 					</div>
 				</form>
 				<div>
