Fic update form

--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -5,15 +5,14 @@
 	<div data-role="main" class="ui-content">
 		
 		<ul id="update-url-list" data-role="listview" data-inset="true"> 
-			<li data-role="list-divider" >Update URL</li>
+			<li data-role="list-divider" >Update RID URL</li>
 			<li>
 				<form id="form-update-url">
 					<div data-role="fieldcontain">
 						<!--insert rid here-->
 						<!--url is here-->
-						<label for="urlLabel" class="urlLabel"></label>
-						</br>
-						<input type="text" name="url" id="url" value="" placeholder="Insert new URL here" />
+						<label for="url" class="urlLabel"></label>
+						<input type="text" name="url" id="url" value="" placeholder="URL for ruleset" />
 					</div>
 				</form>
 				<div>
