Remove field contain

--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -8,12 +8,10 @@
 			<li data-role="list-divider" >Update RID URL</li>
 			<li>
 				<form id="form-update-url">
-					<div data-role="fieldcontain">
 						<!--insert rid here-->
 						<!--url is here-->
-						<label for="url" class="urlLabel"></label>
+						<label for="url" id="urlLabel">New URL: </label>
 						<input type="text" name="url" id="url" value="" placeholder="URL for ruleset" />
-					</div>
 				</form>
 				<div>
 					<a id="update-url-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Update</a>
