--- a/appPages/install-rulesets.html
+++ b/appPages/install-rulesets.html
@@ -11,9 +11,7 @@
        </li>
      </ul>
 
-     <div data-role="collapsible-set" data-content-theme="a" data-iconpos="right">
-        <ul data-role="listview" data-inset="true"  id="installed-rulesets">    
-        </ul>
+     <div data-role="collapsible-set" data-filter="true" data-content-theme="a" data-iconpos="right" id="installed-rulesets">
      </div>
 
    </div><!-- /content -->
