--- a/appPages/updating-url.html
+++ b/appPages/updating-url.html
@@ -11,7 +11,7 @@
 						<!--insert rid here-->
 						<!--url is here-->
 						<label for="url" id="urlLabel">New URL: </label>
-						<input type="text" name="url" id="url" value="" placeholder="URL for ruleset" />
+						<input type="text" name="url" id="url" value="" placeholder="New URL for ruleset" />
 				</form>
 				<div>
 					<a id="update-url-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Update</a>
