start of Channel Manager code. might break.......

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -14,6 +14,9 @@
 			</li>            
 			<li>
 				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Installed Rulesets</a>
+			</li>
+			<li>
+				<a href="#page-ECI-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
 			</li>       
 			<li>
 				<a href="#page-picologging" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Pico Logging</a>
