channel not ruleset

--- a/appPages/ECI-management.html
+++ b/appPages/ECI-management.html
@@ -9,7 +9,7 @@
      <ul id="installed-channel-control" data-role="listview" data-inset="true"> 
        <li data-role="list-divider" >Channel Manager</li>
        <li>
-         <a id="install-channel-button" href="#install-ruleset" class="ui-btn ui-icon-edit ui-btn-icon-right">New Channel</a>
+         <a id="install-channel-button" href="#install-Channel" class="ui-btn ui-icon-edit ui-btn-icon-right">New Channel</a>
        </li>
      </ul>
 
@@ -22,7 +22,7 @@
 </div><!-- /page -->
 
 <div data-role="page" id="install-channel" data-title="Install channel">
-  {% include header.html title="Install a Ruleset" %}
+  {% include header.html title="Install a Channel" %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="install-channel" data-role="listview" data-inset="true"> 
@@ -47,7 +47,7 @@
 </div>
 
 <div data-role="page" id="confirm-uninstall-channel" data-title="Uninstall Channel">
-  {% include header.html title="Uninstall a Ruleset" %}
+  {% include header.html title="Uninstall a Channel" %}
 
 	<div data-role="main" class="ui-content">
 	  <ul id="remove-channel" data-role="listview" data-inset="true"> 
