--- a/appPages/home.html
+++ b/appPages/home.html
@@ -10,6 +10,9 @@
 		<ul data-role="listview" data-inset="true"> 
 			<li data-role="list-divider" >KRL Developer Tools</li>
 			<li>
+				<a href="#about" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">About This Pico</a>
+			</li>            
+			<li>
 				<a href="#listing" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Registered Rulesets</a>
 			</li>            
 			<li>
