--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: app
 title: KRL Developer Tools 
 ---
+{% include_relative appPages/about.html %}
 {% include_relative appPages/listing.html %}
 {% include_relative appPages/home.html %}
 {% include_relative appPages/authorize.html %}
