--- a/appPages/about.html
+++ b/appPages/about.html
@@ -5,10 +5,7 @@
   	<div data-role="main" class="ui-content">
     
           <ul id="about-list" class="ruleset" data-role="listview" data-inset="true" > 
-            <li data-role="list-divider" >Ruleset List</li>
-            <li>
-              <a href="#registering-ruleset" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r  devtools-btn">Register a new ruleset</a>
-            </li>  
+            <li data-role="list-divider" >Pico ECI</li>
 	    <li>
 
 <p>
