channel manager div ID change

--- a/appPages/home.html
+++ b/appPages/home.html
@@ -19,7 +19,7 @@
 				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Installed Rulesets</a>
 			</li>
 			<li>
-				<a href="#page-ECI-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
+				<a href="#page-channel-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
 			</li>       
 			<li>
 				<a href="#page-picologging" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Pico Logging</a>
