--- a/appPages/ECI-management.html
+++ b/appPages/ECI-management.html
@@ -1,4 +1,4 @@
-<div data-role="page" id="page-ECI-management" data-title="ECI-management">
+<div data-role="page" id="page-channel-management" data-title="ECI-management">
   {% include header.html title="ECI-management" %}
 
    <div data-role="content">
