--- a/appPages/home.html
+++ b/appPages/home.html
@@ -13,7 +13,7 @@
 				<a href="#about" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">About This Pico</a>
 			</li>            
 			<li>
-				<a href="#listing" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Registered Rulesets</a>
+				<a href="#page-channel-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Registered Rulesets</a>
 			</li>            
 			<li>
 				<a href="#page-installed-rulesets" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Installed Rulesets</a>
