change file name

--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -1,5 +1,5 @@
-<div data-role="page" id="page-channel-management" data-title="ECI-management">
-  {% include header.html title="ECI-management" %}
+<div data-role="page" id="page-channel-management" data-title="ECI Management" >
+  {% include header.html title="Channel Management" %}
 
    <div data-role="content">
        <ul id="error-msg" data-role="listview" data-inset="true" class="alert alert-error" style="display:none"></ul>
