--- a/appPages/home.html
+++ b/appPages/home.html
@@ -20,7 +20,7 @@
 			</li>
 
 			<li>
-				<a href="#page-channel-management" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
+				<a href="#listing" class="ui-btn ui-btn-inline ui-btn-icon-right ui-icon-carat-r devtools-btn">Channel Manager</a>
 			</li>   
 			    
 			<li>
