--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ title: KRL Developer Tools
 {% include_relative appPages/picologging.html %}
 {% include_relative appPages/install-rulesets.html %}
 
+{% include_relative appPages/channel-management.html %}
+
 
 <!-- ----------templates ---------- -->
 
