--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -9,7 +9,7 @@
      <ul id="installed-channel-control" data-role="listview" data-inset="true"> 
        <li data-role="list-divider" >Channel Manager</li>
        <li>
-         <a id="install-channel-button" href="#install-Channel" class="ui-btn ui-icon-edit ui-btn-icon-right">New Channel</a>
+         <a id="install-channel-button" href="#install-channel" class="ui-btn ui-icon-edit ui-btn-icon-right">New Channel</a>
        </li>
      </ul>
 
