--- a/appPages/channel-management.html
+++ b/appPages/channel-management.html
@@ -36,7 +36,7 @@
 	      </form>
 	      <div>
                 <a id="install-channel-confirm-button" href="#" class="ui-btn ui-btn-b ui-btn-inline">Install</a>
-                <a href="#page-installed-channels" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
+                <a href="#page-channel-management" class="ui-btn ui-btn-inline" data-transition="slide">Cancel</a>
 	      </div>
 	    </li>
      	  </ul>
