Enrich the about page

--- a/appPages/about.html
+++ b/appPages/about.html
@@ -4,12 +4,18 @@
 
   	<div data-role="main" class="ui-content">
     
-          <ul id="about-list" class="ruleset" data-role="listview" data-inset="true" > 
+          <ul id="about-list" class="ruleset" data-role="listview" data-inset="true" >
+
+            <li data-role="list-divider" >Account</li>
+	    <li id="about-account">
+
+	    </li>
+
             <li data-role="list-divider" >Pico ECI</li>
 	    <li>
 
 <p>
-<b>Primary ECI: </b> <span id="eci"></span>
+<b>Primary ECI: </b> <span id="about-eci"></span>
 </p>
 
 <p>
