--- a/appPages/about.html
+++ b/appPages/about.html
@@ -18,8 +18,8 @@
 					<b>Primary ECI: </b> <span id="about-eci"></span>
 				</p>
 
-				<p>
-					<b style="white-space : normal">Note: </b> the ECI is the path into your pico and should be treated as a shared secret between the pico and the application using the pico's Event-Qquery API. Do not disclose it or check it into a repository like Github.
+				<p  style="white-space : normal">
+					<b>Note: </b> the ECI is the path into your pico and should be treated as a shared secret between the pico and the application using the pico's Event-Qquery API. Do not disclose it or check it into a repository like Github.
 				</p>
 
 
